--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "display_name": "CTE Map & Idol Manager",
+    "display_name": "CTE Map & Idol Manager (Archive Ver.)",
     "author": "JLYANG1900",
-    "version": "2.0.0",
-    "description": "京港市虚拟地图扩展终极版。包含原有的地图导航、行程表功能，并新增【偶像事务所RPG管理终端】与【亲密互动(Heartbeat)系统】。支持动态读取角色状态(Vocal/Dance/Desire)，集成全功能偶像培养模拟器。",
+    "version": "2.1.0",
+    "description": "京港市虚拟地图扩展 - 档案风格重制版。包含地图导航、行程表、偶像事务所管理与亲密互动系统。UI已重构为行政档案风格。",
     "js": "index.js",
     "css": "style.css",
     "html": "map.html"
